# numbers-station

./: LICENSE  README.md
numbers-service/: Cargo.toml  build.rs
numbers-service/src/: main.rs  proto.rs  types.rs
numbers-service/src/service/: broadcaster.rs  handlers.rs  mod.rs  stream.rs  tasks.rs
numbers-service/src/service/handlers/: create_station.rs  list_stations.rs  stream_station.rs
proto/numbers/v1/: numbers_service.proto
