[package]
name = "numbers-service"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13"
prost-types = "0.13"
rand = { version = "0.8", features = ["small_rng"] }
tonic = "0.12"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
