[package]
name = "numbers-service"
version = "0.1.0"
edition = "2021"

[dependencies]
figment = { version = "0.10", features = ["env"] }
futures = "0.3"
prost = "0.13"
prost-types = "0.13"
rand = { version = "0.8", features = ["small_rng"] }
serde = { version = "1.0", features = ["derive"] }
tonic = "0.12"
tonic-health = "0.12"
tonic-reflection = "0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.12"
